# increasing-refusal-intervention-robustness

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: refusal-robustness-explainer.html
refusal/: data_pipeline.py  eval_refusal.py  iterated_ablation.py  train_llama.py
sentiment/: eval_sentiment.py  train_gpt2.py
shared/: erasure.py  hooks.py  losses.py  probes.py  wildguard.py
src/intervention_robust_refusal/: __init__.py
src/intervention_robust_refusal/refusal/: data_pipeline.py  eval_refusal.py  iterated_ablation.py  train_llama.py
src/intervention_robust_refusal/sentiment/: eval_sentiment.py  train_gpt2.py
src/intervention_robust_refusal/shared/: erasure.py  hooks.py  losses.py  probes.py  readouts.py  wildguard.py
tests/: test_erasure.py  test_hooks.py  test_losses.py  test_package.py  test_probes.py  test_readouts.py
